# engRAM

./: .gitignore  FORMAT.md  LICENSE  PACKS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: INTEGRATIONS.md  MEMORY.md
install/: install-linux.sh  install-macos.sh  install-windows.ps1
integrations/hermes/: README.md
integrations/hermes/engram/: __init__.py  plugin.yaml
integrations/hermes/nucleus/: __init__.py  plugin.yaml
integrations/hermes/upstream/: PR.md  plugin.yaml
src/engram/: __init__.py  acl.py  audit.py  bench.py  cli.py  crypto.py  dash.py  embed.py  longmemeval.py  offline_guard.py  packs.py  platforms.py  salience.py  selftest.py  server.py  session.py  store.py  vault.py  vaultfile.py  vindex.py
src/engram/data/hermes-plugin/: __init__.py  plugin.yaml
src/nucleus/: __init__.py  acl.py  bench.py  cli.py  crypto.py  embed.py  offline_guard.py  packs.py  platforms.py  salience.py  selftest.py  server.py  session.py  store.py  vault.py  vaultfile.py  vindex.py
src/nucleus/data/: core-facts.mpack  os-linux.mpack  os-macos.mpack  os-windows.mpack
src/nucleus/data/hermes-plugin/: plugin.yaml
tests/: conftest.py  test_acl_audit_packs.py  test_crypto.py  test_dash.py  test_instructions.py  test_offline_selftest_bench.py  test_platforms.py  test_relations.py  test_salience.py  test_session_lock.py  test_starter_packs.py  test_tamper.py  test_twofa.py  test_vault_ops.py
tools/: build_akc_pack.py  build_os_packs.py  build_seed_pack.py  build_starter_pack.py  make_seed_facts.py
tools/akc_source/: README.md
tools/seed/: core_facts.jsonl
tools/starter/: starter_facts.jsonl
