[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory-vault"
version = "1.8.1"
description = "engRAM - high-security, fully offline, encrypted vector memory for AI agents (MCP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pynacl>=1.5",
    "argon2-cffi>=23.1",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.26",
    "mcp>=1.0",
]

[project.scripts]
engram = "engram.cli:main"

[project.optional-dependencies]
# usearch (SIMD HNSW) is only needed ABOVE 20k records; below that engRAM
# uses an exact brute-force index. Keeping it optional means the default
# `pip install` compiles nothing and installs cleanly everywhere; large
# corpora add it with `pip install engram-memory-vault[hnsw]`.
hnsw = ["usearch>=2.9"]
dev = ["pytest>=8", "usearch>=2.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engram = ["models/**/*", "data/**/*"]
